feat: update graph template
Signed-off-by: Otavio Santana <otaviopolianasantana@gmail.com>